更新代码，重新排版习题

--- a/ch10.md
+++ b/ch10.md
@@ -2,7 +2,9 @@
 
 ## 应用 applicative functor
 
-考虑到其函数式的出身，**applicative functor** 这个名称堪称简单明了。函数式程序员最为人诟病的一点就是，总喜欢搞一些稀奇古怪的命名，比如 `mappend` 或者 `liftA4`。诚然，此类名称出现在数学实验室是再自然不过的，但是放在其他任何语境下，这些概念就都像是扮作达斯维达去汽车餐馆搞怪的人。（译者注：此处需要做些解释，1. 汽车餐馆（drive-thru）指的是那种不需要顾客下车就能提供服务的地方，比如麦当劳、星巴克等就会有这种 drive-thru；2. 达斯维达（Darth Vader）是《星球大战》系列主要反派角色，在美国大众文化中的有着广泛的影响力，其造型是很多人致敬模仿的对象；3. 由于 2 的缘故，美国一些星战迷会扮作 Darth Vader 去 drive-thru 点单，YouTube 上有不少这种[搞怪视频](https://www.youtube.com/watch?v=eKVJZAMUh_A)；4. 作者使用这个“典故”是为了说明函数式里很多概念的名称有些“故弄玄虚”，而 applicative functor 是少数比较“正常”的。）
+考虑到其函数式的出身，**applicative functor** 这个名称堪称简单明了。函数式程序员最为人诟病的一点就是，总喜欢搞一些稀奇古怪的命名，比如 `mappend` 或者 `liftA4`。诚然，此类名称出现在数学实验室是再自然不过的，但是放在其他任何语境下，这些概念就都像是扮作达斯维达去汽车餐馆搞怪的人。
+
+> （译者注：此处需要做些解释，1. 汽车餐馆（drive-thru）指的是那种不需要顾客下车就能提供服务的地方，比如麦当劳、星巴克等就会有这种 drive-thru；2. 达斯维达（Darth Vader）是《星球大战》系列主要反派角色，在美国大众文化中的有着广泛的影响力，其造型是很多人致敬模仿的对象；3. 由于 2 的缘故，美国一些星战迷会扮作 Darth Vader 去 drive-thru 点单，YouTube 上有不少这种[搞怪视频](https://www.youtube.com/watch?v=eKVJZAMUh_A)；4. 作者使用这个“典故”是为了说明函数式里很多概念的名称有些“故弄玄虚”，而 applicative functor 是少数比较“正常”的。）
 
 无论如何，applicative 这个名字应该能够向我们表明一些事实，告诉我们作为一个接口，它能为我们带来什么：那就是让不同 functor 可以相互应用（apply）的能力。
 
@@ -13,10 +15,10 @@
 ```js
 // 这样是行不通的，因为 2 和 3 都藏在瓶子里。
 add(Container.of(2), Container.of(3));
-//NaN
+// NaN
 
 // 使用可靠的 map 函数试试
-var container_of_add_2 = map(add, Container.of(2));
+const containerOfAdd2 = map(add, Container.of(2));
 // Container(add(2))
 ```
 
@@ -25,9 +27,7 @@ var container_of_add_2 = map(add, Container.of(2));
 巧的是，完成这种任务的工具已经存在了，即 `chain` 函数。我们可以先 `chain` 然后再 `map` 那个局部调用的 `add(2)`，就像这样：
 
 ```js
-Container.of(2).chain(function(two) {
-  return Container.of(3).map(add(two));
-});
+Container.of(2).chain(two => Container.of(3).map(add(two)));
 ```
 
 只不过，这种方式有一个问题，那就是 monad 的顺序执行问题：所有的代码都只会在前一个 monad 执行完毕之后才执行。想想看，我们的这两个值足够强健且相互独立，如果仅仅为了满足 monad 的顺序要求而延迟 `Container(3)` 的创建，我觉得是非常没有必要的。
@@ -46,6 +46,7 @@ Container.of(add(2)).ap(Container.of(3));
 // Container(5)
 
 // all together now
+
 Container.of(2).map(add).ap(Container.of(3));
 // Container(5)
 ```
@@ -55,9 +56,9 @@ Container.of(2).map(add).ap(Container.of(3));
 可以这样定义一个 `ap` 函数：
 
 ```js
-Container.prototype.ap = function(other_container) {
-  return other_container.map(this.__value);
-}
+Container.prototype.ap = function (otherContainer) {
+  return otherContainer.map(this.$value);
+};
 ```
 
 记住，`this.__value` 是一个函数，将会接收另一个 functor 作为参数，所以我们只需 `map` 它。由此我们可以得出 applicative functor 的定义：
@@ -69,7 +70,7 @@ Container.prototype.ap = function(other_container) {
 讲到这里，我已经感受到你的疑虑了（也或者是困惑和恐惧）；心态开放点嘛，`ap` 还是很有用的。在深入理解这个概念之前，我们先来探索一个特性。
 
 ```js
-F.of(x).map(f) == F.of(f).ap(F.of(x))
+F.of(x).map(f) === F.of(f).ap(F.of(x));
 ```
 
 这行代码翻译成人类语言就是，map 一个 `f` 等价于 `ap` 一个值为 `f` 的 functor。或者更好的译法是，你既可以把 `x` 放到容器里然后调用 `map(f)`，也可以同时让 `f` 和 `x` 发生 lift（参看第 8 章），然后对他们调用 `ap`。这让我们能够以一种从左到右的方式编写代码：
@@ -93,9 +94,9 @@ Task.of(add).ap(Task.of(2)).ap(Task.of(3));
 ```js
 // Http.get :: String -> Task Error HTML
 
-var renderPage = curry(function(destinations, events) { /* render page */  });
+const renderPage = curry((destinations, events) => { /* render page */ });
 
-Task.of(renderPage).ap(Http.get('/destinations')).ap(Http.get('/events'))
+Task.of(renderPage).ap(Http.get('/destinations')).ap(Http.get('/events'));
 // Task("<div>some page with dest and events</div>")
 ```
 
@@ -106,23 +107,17 @@ Task.of(renderPage).ap(Http.get('/destinations')).ap(Http.get('/events'))
 再来看另外一个例子。
 
 ```js
-// 帮助函数：
-// ==============
-//  $ :: String -> IO DOM
-var $ = function(selector) {
-  return new IO(function(){ return document.querySelector(selector) });
-}
+// $ :: String -> IO DOM
+const $ = selector => new IO(() => document.querySelector(selector));
 
-//  getVal :: String -> IO String
-var getVal = compose(map(_.prop('value')), $);
+// getVal :: String -> IO String
+const getVal = compose(map(prop('value')), $);
 
-// Example:
-// ===============
-//  signIn :: String -> String -> Bool -> User
-var signIn = curry(function(username, password, remember_me){ /* signing in */  })
+// signIn :: String -> String -> Bool -> User
+const signIn = curry((username, password, rememberMe) => { /* signing in */ });
 
 IO.of(signIn).ap(getVal('#email')).ap(getVal('#password')).ap(IO.of(false));
-// IO({id: 3, email: "gg@allin.com"})
+// IO({ id: 3, email: 'gg@allin.com' })
 ```
 
 `signIn` 是一个接收 3 个参数的 curry 函数，因此我们需要调用 `ap` 3 次。在每一次的 `ap` 调用中，`signIn` 就收到一个参数然后运行，直到所有的参数都传进来，它也就执行完毕了。我们可以继续扩展这种模式，处理任意多的参数。另外，左边两个参数在使用 `getVal` 调用后自然而然地成为了一个 `IO`，但是最右边的那个却需要手动 `lift`，然后变成一个 `IO`，这是因为 `ap` 需要调用者及其参数都属于同一类型。
@@ -135,15 +130,11 @@ IO.of(signIn).ap(getVal('#email')).ap(getVal('#password')).ap(IO.of(false));
 我们来试试以一种 pointfree 的方式调用 applicative functor。因为 `map` 等价于 `of/ap`，那么我们就可以定义无数个能够 `ap` 通用函数。
 
 ```js
-var liftA2 = curry(function(f, functor1, functor2) {
-  return functor1.map(f).ap(functor2);
-});
+const liftA2 = curry((g, f1, f2) => f1.map(g).ap(f2));
 
-var liftA3 = curry(function(f, functor1, functor2, functor3) {
-  return functor1.map(f).ap(functor2).ap(functor3);
-});
+const liftA3 = curry((g, f1, f2, f3) => f1.map(g).ap(f2).ap(f3));
 
-//liftA4, etc
+// liftA4, etc
 ```
 
 `liftA2` 是个奇怪的名字，听起来像是破败工厂里挑剔的货运电梯，或者伪豪华汽车公司的个性车牌。不过你要是真正理解了，那么它的含义也就不证自明了：让那些小代码块发生 lift，成为 applicative functor 中的一员。
@@ -156,14 +147,19 @@ var liftA3 = curry(function(f, functor1, functor2, functor3) {
 // checkEmail :: User -> Either String Email
 // checkName :: User -> Either String String
 
+const user = {
+  name: 'John Doe',
+  email: 'blurp_blurp',
+};
+
 //  createUser :: Email -> String -> IO User
-var createUser = curry(function(email, name) { /* creating... */ });
+const createUser = curry((email, name) => { /* creating... */ });
 
 Either.of(createUser).ap(checkEmail(user)).ap(checkName(user));
-// Left("invalid email")
+// Left('invalid email')
 
 liftA2(createUser, checkEmail(user), checkName(user));
-// Left("invalid email")
+// Left('invalid email')
 ```
 
 `createUser` 接收两个参数，因此我们使用的是 `liftA2`。上述两个语句是等价的，但是使用了 `liftA2` 的版本没有提到 `Either`，这就使得它更加通用灵活，因为不必与特定的数据类型耦合在一起。
@@ -174,25 +170,25 @@ liftA2(createUser, checkEmail(user), checkName(user));
 liftA2(add, Maybe.of(2), Maybe.of(3));
 // Maybe(5)
 
-liftA2(renderPage, Http.get('/destinations'), Http.get('/events'))
-// Task("<div>some page with dest and events</div>")
+liftA2(renderPage, Http.get('/destinations'), Http.get('/events'));
+// Task('<div>some page with dest and events</div>')
 
 liftA3(signIn, getVal('#email'), getVal('#password'), IO.of(false));
-// IO({id: 3, email: "gg@allin.com"})
+// IO({ id: 3, email: 'gg@allin.com' })
 ```
 
 ## 操作符
 
 在 haskell、scala、PureScript 以及 swift 等语言中，开发者可以创建自定义的中缀操作符（infix operators），所以你能看到到这样的语法：
 
-```hs
--- haskell
+```haskell
+-- Haskell / PureScript
 add <$> Right 2 <*> Right 3
 ```
 
 ```js
 // JavaScript
-map(add, Right(2)).ap(Right(3))
+map(add, Right(2)).ap(Right(3));
 ```
 
 `<$>` 就是 `map`（亦即 `fmap`），`<*>` 不过就是 `ap`。这样的语法使得开发者可以以一种更自然的风格来书写函数式应用，而且也能减少一些括号。
@@ -211,27 +207,22 @@ map(add, Right(2)).ap(Right(3))
 
 ```js
 // 从 of/ap 衍生出的 map
-X.prototype.map = function(f) {
+X.prototype.map = function map(f) {
   return this.constructor.of(f).ap(this);
-}
+};
 ```
 
 monad 可以说是处在食物链的顶端，因此如果已经有了一个 `chain` 函数，那么就可以免费得到 functor 和 applicative：
 
 ```js
 // 从 chain 衍生出的 map
-X.prototype.map = function(f) {
-  var m = this;
-  return m.chain(function(a) {
-    return m.constructor.of(f(a));
-  });
-}
+X.prototype.map = function map(f) {
+  return this.chain(a => this.constructor.of(f(a)));
+};
 
 // 从 chain/map 衍生出的 ap
-X.prototype.ap = function(other) {
-  return this.chain(function(f) {
-    return other.map(f);
-  });
+X.prototype.ap = function ap(other) {
+  return this.chain(f => other.map(f));
 };
 ```
 
@@ -252,10 +243,10 @@ X.prototype.ap = function(other) {
 下面的例子可以说明这一点：
 
 ```js
-  var tOfM = compose(Task.of, Maybe.of);
+const tOfM = compose(Task.of, Maybe.of);
 
-  liftA2(_.concat, tOfM('Rainy Days and Mondays'), tOfM(' always get me down'));
-  // Task(Maybe(Rainy Days and Mondays always get me down))
+liftA2(liftA2(concat), tOfM('Rainy Days and Mondays'), tOfM(' always get me down'));
+// Task(Maybe(Rainy Days and Mondays always get me down))
 ```
 
 你看，不必担心不同的类型会混合在一起。
@@ -266,14 +257,14 @@ X.prototype.ap = function(other) {
 
 ```js
 // 同一律
-A.of(id).ap(v) == v
+A.of(id).ap(v) === v;
 ```
 
 是的，对一个 functor 应用 `id` 函数不会改变 `v` 里的值。比如：
 
 ```js
-var v = Identity.of("Pillow Pets");
-Identity.of(id).ap(v) == v
+const v = Identity.of('Pillow Pets');
+Identity.of(id).ap(v) === v;
 ```
 
 `Identity.of(id)` 的“无用性”让我不禁莞尔。这里有意思的一点是，就像我们之前证明了的，`of/ap` 等价于 `map`，因此这个同一律遵循的是 functor 的同一律：`map(id) == id`。
@@ -284,7 +275,7 @@ Identity.of(id).ap(v) == v
 
 ```js
 // 同态
-A.of(f).ap(A.of(x)) == A.of(f(x))
+A.of(f).ap(A.of(x)) === A.of(f(x));
 ```
 
 *同态*就是一个能够保持结构的映射（structure preserving map）。实际上，functor 就是一个在不同范畴间的同态，因为 functor 在经过映射之后保持了原始范畴的结构。
@@ -294,7 +285,7 @@ A.of(f).ap(A.of(x)) == A.of(f(x))
 一个简单例子：
 
 ```js
-Either.of(_.toUpper).ap(Either.of("oreos")) == Either.of(_.toUpper("oreos"))
+Either.of(toUpperCase).ap(Either.of('oreos')) === Either.of(toUpperCase('oreos'));
 ```
 
 ### 互换（interchange）
@@ -303,16 +294,16 @@ Either.of(_.toUpper).ap(Either.of("oreos")) == Either.of(_.toUpper("oreos"))
 
 ```js
 // 互换
-v.ap(A.of(x)) == A.of(function(f) { return f(x) }).ap(v)
+v.ap(A.of(x)) === A.of(f => f(x)).ap(v);
 ```
 
 这里有个例子：
 
 ```js
-var v = Task.of(_.reverse);
-var x = 'Sparklehorse';
+const v = Task.of(reverse);
+const x = 'Sparklehorse';
 
-v.ap(Task.of(x)) == Task.of(function(f) { return f(x) }).ap(v)
+v.ap(Task.of(x)) === Task.of(f => f(x)).ap(v);
 ```
 
 ### 组合（composition）
@@ -321,15 +312,15 @@ v.ap(Task.of(x)) == Task.of(function(f) { return f(x) }).ap(v)
 
 ```js
 // 组合
-A.of(compose).ap(u).ap(v).ap(w) == u.ap(v.ap(w));
+A.of(compose).ap(u).ap(v).ap(w) === u.ap(v.ap(w));
 ```
 
 ```js
-var u = IO.of(_.toUpper);
-var v = IO.of(_.concat("& beyond"));
-var w = IO.of("blood bath ");
+const u = IO.of(toUpperCase);
+const v = IO.of(concat('& beyond'));
+const w = IO.of('blood bath ');
 
-IO.of(_.compose).ap(u).ap(v).ap(w) == u.ap(v.ap(w))
+IO.of(compose).ap(u).ap(v).ap(w) === u.ap(v.ap(w));
 ```
 
 ## 总结
@@ -338,86 +329,40 @@ IO.of(_.compose).ap(u).ap(v).ap(w) == u.ap(v.ap(w))
 
 至此我们已经基本介绍完容器的 api 了，我们学会了如何对函数调用 `map`、`chain` 和 `ap`。下一章，我们将学习如何更好地处理多个 functor，以及如何以一种原则性的方式拆解它们。
 
-[Chapter 11: Traversable/Foldable Functors](ch11.md)
-
-
-
 ## 练习
 
+1. 写一个函数，使用 `Maybe` 和 `ap` 实现让两个可能是 null 的数值相加。
+
 ```js
-require('./support');
-var Task = require('data.task');
-var _ = require('ramda');
+// safeAdd :: Maybe Number -> Maybe Number -> Maybe Number  
+const safeAdd = undefined;  
+```
 
-// 模拟浏览器的 localStorage 对象
-var localStorage = {};
+2. 用 `liftA2` 重写上一题中的函数
 
+```js
+// safeAdd :: Maybe Number -> Maybe Number -> Maybe Number  
+const safeAdd = undefined;  
+```
 
+3. 给定以下帮助函数
 
-// 练习 1
-// ==========
-// 写一个函数，使用 Maybe 和 ap() 实现让两个可能是 null 的数值相加。
+```js
+const localStorage = {  
+  player1: { id:1, name: 'Albert' },  
+  player2: { id:2, name: 'Theresa' },  
+};  
+  
+// getFromCache :: String -> IO User  
+const getFromCache = x => new IO(() => localStorage[x]);  
+  
+// game :: User -> User -> String  
+const game = curry((p1, p2) => `${p1.name} vs ${p2.name}`);  
+```
 
-//  ex1 :: Number -> Number -> Maybe Number
-var ex1 = function(x, y) {
+写一个 IO，从缓存中读取 player1 和 player2，然后开始游戏。
 
-};
-
-
-// 练习 2
-// ==========
-// 写一个函数，接收两个 Maybe 为参数，让它们相加。使用 liftA2 代替 ap()。
-
-//  ex2 :: Maybe Number -> Maybe Number -> Maybe Number
-var ex2 = undefined;
-
-
-
-// 练习 3
-// ==========
-// 运行 getPost(n) 和 getComments(n)，两者都运行完毕后执行渲染页面的操作。（参数 n 可以是任意值）。
-
-var makeComments = _.reduce(function(acc, c){ return acc+"<li>"+c+"</li>" }, "");
-var render = _.curry(function(p, cs) { return "<div>"+p.title+"</div>"+makeComments(cs); });
-
-//  ex3 :: Task Error HTML
-var ex3 = undefined;
-
-
-
-// 练习 4
-// ==========
-// 写一个 IO，从缓存中读取 player1 和 player2，然后开始游戏。
-
-localStorage.player1 = "toby";
-localStorage.player2 = "sally";
-
-var getCache = function(x) {
-  return new IO(function() { return localStorage[x]; });
-}
-var game = _.curry(function(p1, p2) { return p1 + ' vs ' + p2; });
-
-//  ex4 :: IO String
-var ex4 = undefined;
-
-
-
-
-
-// 帮助函数
-// =====================
-
-function getPost(i) {
-  return new Task(function (rej, res) {
-    setTimeout(function () { res({ id: i, title: 'Love them futures' }); }, 300);
-  });
-}
-
-function getComments(i) {
-  return new Task(function (rej, res) {
-    setTimeout(function () {
-      res(["This book should be illegal", "Monads are like space burritos"]);
-    }, 300);
-  });
-}
+```js
+// startGame :: IO String  
+const startGame = undefined;  
 ```
