--- a/ch11.md
+++ b/ch11.md
@@ -79,7 +79,7 @@ const arrayToMaybe = x => Maybe.of(x[0]);
 
 从另一个角度来看，转换的是某个作用（effects）。由此可以认为，`ioToTask`就是从同步到异步的转换，和`arrayToMaybe`是从非确定性到可能失败。要注意的是，在`JavaScript` 里，并不能把异步变到同步，无法实现`taskToIO`方法，那是个"超自然"变换。
 
-## 方法狂 Feature Envy
+## 方法狂
 
 假设要使用一些其他类型的方法（feature），比如对一个`List`进行`sortBy`。*Natural Transformations* 提供了变换为目标类型的巧妙方式，只要该类型支持`map`操作。
 
@@ -95,7 +95,7 @@ const doListyThings_ = compose(sortBy(h), filter(g), map(f), arrayToList); // la
 
 此外，如`doListyThings_`所示，将映射操作`map(f)`移到 *Natural Transformations* 的左边，更加容易实现函数的优化或者复合。
 
-## 同构的 JavaScript Isomorphic JavaScript
+## 同构的 JavaScript
 
 当把一个值前后怎么转换都不会丢失任何数据时，可称之为 *同构 Isomorphic* 。看上去挺高大上，不过就是“保持相同的数据”而已。如果两个类型在 *Natural Transformations* 中既可以`to`也可以`from` ，就被称之为是 *同构 Isomorphic* ，证明如下：
 
@@ -181,38 +181,21 @@ const saveComment = compose(
 
 这种连续而冗长的类型是实现的代价 - 从以太中召唤而来。当然，隐式作用（implicit effects）更有潜在风险，所以也算是合理的方案。不过,如果想归并大量类型，还需要更多的工具。之后，我们将通过 *Traverable* 讨论重组类型。
 
-[Chapter 12: Traversing the Stone](ch12.md)
-
 ## 练习
 
-{% exercise %}  
-写一个 natural transformation 将`Either b a`转换到`Maybe a`
-
-{% initial src="./exercises/ch11/exercise_a.js#L3;" %}
+1. 写一个 natural transformation 将`Either b a`转换到`Maybe a`
 
 ```js
 // eitherToMaybe :: Either b a -> Maybe a
 const eitherToMaybe = undefined
 ```
 
-{% solution src="./exercises/ch11/solution_a.js" %}  
-{% validation src="./exercises/ch11/validation_a.js" %}  
-{% context src="./exercises/support.js" %}  
-{% endexercise %}
-
----
+2. 使用`eitherToTask`, 简化`findNameById`方法, 去掉嵌套的`Either`。
 
 ```js
 // eitherToTask :: Either a b -> Task a b
 const eitherToTask = either(Task.rejected, Task.of)
-```
 
-{% exercise %}  
-使用`eitherToTask`, 简化`findNameById`方法, 去掉嵌套的`Either`。
-
-{% initial src="./exercises/ch11/exercise_b.js#L6;" %}
-
-```js
 // findNameById :: Number -> Task Error (Either Error User)
 const findNameById = compose(
   map(map(prop('name'))),
@@ -220,24 +203,14 @@ const findNameById = compose(
 )
 ```
 
-{% solution src="./exercises/ch11/solution_b.js" %}  
-{% validation src="./exercises/ch11/validation_b.js" %}  
-{% context src="./exercises/support.js" %}  
-{% endexercise %}
-
----
-
-友情提示，以下方法可用于解练习题
+3. 给定以下帮助函数
 
 ```hs
 split :: String -> String -> [String]
 intercalate :: String -> [String] -> String
 ```
-
-{% exercise %}  
-写出 String 和 [Char]的 Isomorphic。
-
-{% initial src="./exercises/ch11/exercise_c.js#L8;" %}
+ 
+写出 `String` 和 `[Char]` 的 Isomorphic。
 
 ```js
 // strToList :: String -> [Char]
@@ -246,8 +219,3 @@ const strToList = undefined
 // listToStr :: [Char] -> String
 const listToStr = undefined
 ```
-
-{% solution src="./exercises/ch11/solution_c.js" %}  
-{% validation src="./exercises/ch11/validation_c.js" %}  
-{% context src="./exercises/support.js" %}  
-{% endexercise %}
