--- a/source/ch13.md
+++ b/source/ch13.md
@@ -93,8 +93,7 @@ If you stare at these long enough the pattern will pop out at you like a magic e
 
 I've used `Map` a few times now. Pardon me if you two weren't properly introduced. `Map` simply wraps `Object` so we can embellish it with some extra methods without altering the fabric of the universe.
 
-
-## All my favourite functors are semigroups.
+## All my favourite functors are semigroups
 
 The types we've seen so far which implement the functor interface all implement semigroup one as well. Let's look at `Identity` (the artist previously known as Container):
 
@@ -115,7 +114,6 @@ Other types have similar behavior:
 // combine with error handling
 Right(Sum(2)).concat(Right(Sum(3))) // Right(Sum(5))
 Right(Sum(2)).concat(Left('some error')) // Left('some error')
-
 
 // combine async
 Task.of([1,2]).concat(Task.of([3,4])) // Task([1,2,3,4])
@@ -251,7 +249,6 @@ fold(Sum.empty(), []) // Sum(0)
 fold(Any.empty(), [Any(false), Any(true)]) // Any(true)
 fold(Any.empty(), []) // Any(false)
 
-
 fold(Either.of(Max.empty()), [Right(Max(3)), Right(Max(21)), Right(Max(11))]) // Right(Max(21))
 fold(Either.of(Max.empty()), [Right(Max(3)), Left('error retrieving value'), Right(Max(11))]) // Left('error retrieving value')
 
@@ -273,10 +270,9 @@ Map({id: First(123), isPaid: Any(true), points: Sum(13)}).concat(Map({id: First(
 
 We'll merge a couple of accounts and keep the `First` id. There is no way to define an `empty` value for it. Doesn't mean it's not useful.
 
-
 ## Grand unifying theory
 
-## Group theory or Category theory?
+## Group theory or Category theory
 
 The notion of a binary operation is everywhere in abstract algebra. It is, in fact, the primary operation for a *category*. We cannot, however, model our operation in category theory without an *identity*. This is the reason we start with a semi-group from group theory, then jump to a monoid in category theory once we have *empty*.
 
@@ -294,7 +290,6 @@ const Endo = run => ({
 })
 
 Endo.empty = () => Endo(identity)
-
 
 // in action
 
@@ -323,10 +318,8 @@ Even applicative functors have a monoidal formulation known in the category theo
 const ap = compose(map(([f, x]) => f(x)), concat)
 ```
 
-
 ## In summary
 
 So you see, everything is connected, or can be. This profound realization makes *Monoids* a powerful modelling tool for broad swaths of app architecture to the tiniest pieces of datum. I encourage you to think of *monoids* whenever direct accumulation or combination is part of your application, then once you've got that down, start to stretch the definition to more applications (you'd be surprised how much one can model with a *monoid*).
 
 ## Exercises
-
