--- a/source/ch12.md
+++ b/source/ch12.md
@@ -100,7 +100,7 @@ const validate = f => traverse(Either.of, fromPredicate(f));
 
 Here we have two different functions based on if we `map` or `traverse`.  The first, `partition` will give us an array of `Left`s and `Right`s according to the predicate function. This is useful to keep precious data around for future use rather than filtering it out with the bathwater. `validate` instead will give us the first item that fails the predicate in `Left`, or all the items in `Right` if everything is hunky dory. By choosing a different type order, we get different behavior.
 
-Let's look at the `traverse` function of `List`, to see how the `validate` method is made. 
+Let's look at the `traverse` function of `List`, to see how the `validate` method is made.
 
 ```javascript
 traverse(of, fn) {
@@ -115,8 +115,8 @@ This just runs a `reduce` on the list. The reduce function is `(f, a) => fn(a).m
 
 1. `reduce(..., ...)`
 
-   Remember the signature of `reduce :: [a] -> (f -> a -> f) -> f -> f`. The first argument is actually provided by the dot-notation on `$value`, so it's a list of things. 
-   Then we need a function from a `f` (the accumulator) and a `a` (the iteree) to return us a new accumulator. 
+   Remember the signature of `reduce :: [a] -> (f -> a -> f) -> f -> f`. The first argument is actually provided by the dot-notation on `$value`, so it's a list of things.
+   Then we need a function from a `f` (the accumulator) and a `a` (the iteree) to return us a new accumulator.
 
 2. `of(new List([]))`
 
@@ -136,13 +136,11 @@ This just runs a `reduce` on the list. The reduce function is `(f, a) => fn(a).m
 
 5. .`ap(f)`
 
-   Remember that `f` is an Applicative here, so we can apply the function `bs => bs.concat(b)` to whatever value `bs :: [a]` is in `f`. Fortunately for us, `f` comes from our initial seed and has the following type: `f :: Either e [a]` which is by the way, preserved when we apply `bs => bs.concat(b)`. 
-   When `f` is `Right`, this calls `bs => bs.concat(b)`, which returns a `Right` with the item added to the list. When `Left`, the left value (from the previous step or previous iteration respectively) is returned. 
-   
+   Remember that `f` is an Applicative here, so we can apply the function `bs => bs.concat(b)` to whatever value `bs :: [a]` is in `f`. Fortunately for us, `f` comes from our initial seed and has the following type: `f :: Either e [a]` which is by the way, preserved when we apply `bs => bs.concat(b)`. When `f` is `Right`, this calls `bs => bs.concat(b)`, which returns a `Right` with the item added to the list. When `Left`, the left value (from the previous step or previous iteration respectively) is returned.
+
    > fn(a).map(b => bs => bs.concat(b)).ap(f) :: Either e [a]
 
-This apparently miraculous transformation is achieved with just 6 measly lines of code in `List.traverse`, and is accomplished with `of`, `map` and `ap`, so will work for any Applicative Functor. This is a great example 
-of how those abstraction can help to write highly generic code with only a few assumptions (that can, incidentally, be declared and checked at the type level!).
+This apparently miraculous transformation is achieved with just 6 measly lines of code in `List.traverse`, and is accomplished with `of`, `map` and `ap`, so will work for any Applicative Functor. This is a great example of how those abstraction can help to write highly generic code with only a few assumptions (that can, incidentally, be declared and checked at the type level!).
 
 ## Waltz of the Types
 
@@ -205,7 +203,6 @@ This should be straightforward. If we place an `Identity` in our functor, then t
 const comp1 = compose(sequence(Compose.of), map(Compose.of));
 const comp2 = (Fof, Gof) => compose(Compose.of, map(sequence(Gof)), sequence(Fof));
 
-
 // Test it out with some types we have lying around
 comp1(Identity(Right([true])));
 // Compose(Right([Identity(true)]))
@@ -245,7 +242,6 @@ traverse(A.of, A.of) === A.of;
 ```
 
 Which, again, is nice from a performance standpoint.
-
 
 ## In Summary
 
